change the media type in an existing element type (not that it ever made sense
to do so). Reported by Paul Orrock. [David]

=item *

Fixed the selection of text triggered by the Find dialog box on Mozilla and IE
(although I find IE to be a bit broken in this way). [David]

=item *

Fixed the size of the preview links on the desktop. [David]

=back

=head1 VERSION 1.10.0 (2006-01-23)

=head2 Improvements

=over

=item *

Eliminated letter graphics for "Published" and "Deployed" labels in story,
media, and template managers in favor of localizable characters. [David]

=item *

Moved the C<display_pages()> method from subclasses to
L<Bric::Util::Burner|Bric::Util::Burner>. Each subclass must implement a
C<display_element()> method for it to work; this means that it works for all
current burners except the HTML::Template burner, which manages pages
differently. This also fixed pagination issues in the Template Toolkit and PHP
burners. [David]

=item *

Completely updated L<Bric::Templates|Bric::Templates> and
L<Bric::AdvTemplates|Bric::AdvTemplates>, with expanded API documentation and
examples in Mason, Template Toolkit, and PHP. [David]

=item *

Refactored the left navigation code to perform better and be easier to
maintain. It now also sorts the admin menu items in alphabetical order by the
localized name of each. [David]

=item *

Updated the UI to fix Internet Explorer glitches. [Marshall]

=item *

The Element Type profile is now much smarter about displaying site
associations with an element type. If the user has access to only one site and
the element type is associated with no more than one site, then the "Sites"
section won't be displayed, but the primary output channel can be selected via
a radio button among the list of output channels. If the user has access to
more than one site or if the element type is associated with more than one
site, the "Sites" section will be displayed and the primary output channel can